# eduagent

./: .env.example  .gitattributes  .gitignore  HOWTO.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 0000_create_all_tables.py  0001_add_anthropic_api_key_to_users.py  0002_alter_api_key_column_varchar.py  0003_add_supabase_uid_to_users.py  0004_add_gemini_key_and_llm_provider.py
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/agent/: graph.py  llm_provider.py  state.py
backend/app/agent/nodes/: orchestrator.py  rag_retriever.py  summarizer.py  task_manager.py  tutor.py
backend/app/agent/prompts/: orchestrator.py  summarizer.py  tutor_adult.py  tutor_child.py  tutor_teen.py
backend/app/agent/tools/: create_study_plan.py  explain_concept.py  get_pending_tasks.py  search_documents.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  chat.py  documents.py  lms.py  tasks.py  user.py
backend/app/connectors/: base.py  google_classroom.py  moodle.py  parser.py
backend/app/models/: document.py  lms_connection.py  session.py  task.py  user.py
backend/app/rag/: embeddings.py  ingestion.py  reranker.py  retriever.py
backend/app/schemas/: chat.py  document.py  task.py  user.py
backend/app/services/: chat_service.py  crypto.py  document_service.py  lms_service.py  storage.py  supabase_client.py  task_service.py
backend/tests/: conftest.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: providers.tsx
frontend/src/hooks/: useApiKeyStatus.ts  useChat.ts  useDocuments.ts  useSSE.ts  useTasks.ts
frontend/src/lib/: api.ts  auth.ts  supabase.ts
frontend/src/stores/: chatStore.ts  uiStore.ts  (+1 more)
nginx/: nginx.conf
scripts/: migrate.js  supabase_migration.sql
(+46 files in other folders)
